--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,14 @@ html,body {
     height:100%;
     margin:0px;
 }
+.input{
+    text-align: center;
+    padding:0;
+    position: absolute;
+    left: 10px;
+    bottom: 30px;
+    box-shadow: $shadow;
+}
 
 .main-pic{
     height:100%;
@@ -24,9 +32,9 @@ h1{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    padding:0;
     
-    #img{
-       
+    #img{       
         width: 300px;
         height:300px;
         @media only screen and (max-width:578 px){
@@ -48,9 +56,9 @@ h1{
         text-align: center;
         overflow: hidden;
         color: white;
-        background: linear-gradient(to bottom right, rgb(103, 241, 103), rgb(0, 54, 0));
+        background: linear-gradient(to bottom right, rgba(103, 241, 103, 0.568), rgba(0, 54, 0, 0.5));
         border-radius:5px;
-        box-shadow: $shadow;
+        padding: 10px;
     }
 }
 
