--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ html, body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  z-index: -1;
 }
 
 h1 {
@@ -85,5 +86,30 @@ h1 {
   background: linear-gradient(to bottom right, rgba(103, 241, 103, 0.568), rgba(0, 54, 0, 0.5));
   border-radius: 5px;
   padding: 10px;
+}
+
+section {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  position: absolute;
+  left: 25px;
+  right: 25px;
+  height: 200px;
+  width: 100%;
+}
+
+.image.featured {
+  display: block;
+  width: 100%;
+  margin: 0 0 2em 0;
+}
+
+.image {
+  position: absolute;
+  border: 0;
 }
 /*# sourceMappingURL=style.css.map */
