--- a/style2.css
+++ b/style2.css
@@ -2,4 +2,88 @@ html, body {
   height: 100vh;
   margin: 0;
 }
+
+html {
+  font-size: 16px;
+  font-family: "roboto", sans-serif;
+  color: #ececec;
+  background: #ececec;
+}
+
+body {
+  overflow: scroll;
+}
+
+a {
+  text-decoration: none;
+  color: #ececec;
+}
+
+.line-kris {
+  width: 50%;
+}
+
+#main-pic {
+  height: 100vh;
+  margin: 0;
+  background-image: url(images/overview.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.kris-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  width: 55vw;
+  margin: 0 auto;
+}
+
+.kris-container .kris-box1 {
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.kris-container .kris-box1 p {
+  padding: 1em 0 0 0;
+  font-size: 1em;
+  color: #464545;
+}
+
+.kris-container img {
+  width: 40%;
+  height: 60%;
+  margin-left: 3em;
+}
+
+.kris-title {
+  display: inline-block;
+  text-align: left;
+  width: 80vw;
+  padding-right: 2em;
+  text-transform: uppercase;
+  font-size: 2em;
+  color: #0f357a;
+  position: relative;
+  text-align: right;
+  border-bottom: 1px solid #0f357a;
+  position: relative;
+  left: -40vw;
+  top: -3em;
+}
 /*# sourceMappingURL=style2.css.map */
