--- a/style2.css
+++ b/style2.css
@@ -29,7 +29,7 @@ h6 {
   font-family: "Encode Sans Semi Expanded", sans-serif;
 }
 
-#main-pic {
+#main-energy {
   height: 100vh;
   margin: 0;
   background-image: url(/images/hightech.jpg);
