--- a/style2.scss
+++ b/style2.scss
@@ -30,7 +30,7 @@ h6 {
   font-family: "Encode Sans Semi Expanded", sans-serif;
 }
 
-#main-pic {
+#main-energy {
   height: 100vh;
   margin: 0;
   background-image: url(/images/hightech.jpg);
